// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`posts reducer (1) should handle initial state 1`] = `Immutable.Map {}`;

exports[`posts reducer (2) should create group key according to location. action:LOCATION_CHANGE 1`] = `
Immutable.Map {
  "trending": Immutable.Record {
    "entries": Immutable.OrderedMap {},
    "err": null,
    "loading": false,
    "hasMore": true,
  },
}
`;

exports[`posts reducer (3) should create group key according to location. action:LOCATION_CHANGE 1`] = `
Immutable.Map {
  "trending": Immutable.Record {
    "entries": Immutable.OrderedMap {},
    "err": null,
    "loading": false,
    "hasMore": true,
  },
  "trending-art": Immutable.Record {
    "entries": Immutable.OrderedMap {},
    "err": null,
    "loading": false,
    "hasMore": true,
  },
}
`;

exports[`posts reducer (4) should  not create group for non-filter path. action:LOCATION_CHANGE 1`] = `
Immutable.Map {
  "trending": Immutable.Record {
    "entries": Immutable.OrderedMap {},
    "err": null,
    "loading": false,
    "hasMore": true,
  },
  "trending-art": Immutable.Record {
    "entries": Immutable.OrderedMap {},
    "err": null,
    "loading": false,
    "hasMore": true,
  },
}
`;

exports[`posts reducer (5) start fetching "trending". action:POSTS_FETCH_BEGIN 1`] = `
Immutable.Map {
  "trending": Immutable.Record {
    "entries": Immutable.OrderedMap {},
    "err": null,
    "loading": true,
    "hasMore": true,
  },
  "trending-art": Immutable.Record {
    "entries": Immutable.OrderedMap {},
    "err": null,
    "loading": false,
    "hasMore": true,
  },
}
`;

exports[`posts reducer (6) start fetching "trending". should keep old entries. action:POSTS_FETCH_BEGIN 1`] = `
Immutable.Map {
  "trending": Immutable.Record {
    "entries": Immutable.OrderedMap {
      "12": Object {
        "body": "bar",
      },
      "34": Object {
        "body": "foo",
      },
    },
    "err": null,
    "loading": true,
    "hasMore": true,
  },
  "trending-art": Immutable.Record {
    "entries": Immutable.OrderedMap {},
    "err": null,
    "loading": false,
    "hasMore": true,
  },
}
`;

exports[`posts reducer (7) fetching "trending" completed. action:POSTS_FETCH_OK 1`] = `
Immutable.Map {
  "trending": Immutable.Record {
    "entries": Immutable.OrderedMap {
      "14": Object {
        "author": "good-karma",
        "id": 14,
        "permlink": "welcome to esteem",
        "votes": 5,
      },
      "12": Object {
        "author": "talhasch",
        "id": 12,
        "permlink": "lorem ipsum",
        "votes": 12,
      },
      "16": Object {
        "author": "chrisbolten",
        "id": 16,
        "permlink": "sit amet",
        "votes": 3,
      },
    },
    "err": null,
    "loading": false,
    "hasMore": undefined,
  },
  "trending-art": Immutable.Record {
    "entries": Immutable.OrderedMap {},
    "err": null,
    "loading": false,
    "hasMore": true,
  },
}
`;

exports[`posts reducer (8) should not add exiting item to entries. action:POSTS_FETCH_OK 1`] = `
Immutable.Map {
  "trending": Immutable.Record {
    "entries": Immutable.OrderedMap {
      "12": Object {
        "author": "good-karma",
        "id": 12,
        "permlink": "welcome to esteem",
        "votes": 5,
      },
    },
    "err": null,
    "loading": false,
    "hasMore": undefined,
  },
}
`;

exports[`posts reducer (9) simulate load more. action:POSTS_FETCH_OK 1`] = `
Immutable.Map {
  "trending": Immutable.Record {
    "entries": Immutable.OrderedMap {
      "14": Object {
        "author": "good-karma",
        "id": 14,
        "permlink": "welcome to esteem",
        "votes": 5,
      },
      "12": Object {
        "author": "talhasch",
        "id": 12,
        "permlink": "lorem ipsum",
        "votes": 12,
      },
      "16": Object {
        "author": "chrisbolten",
        "id": 16,
        "permlink": "sit amet",
        "votes": 3,
      },
      "3": Object {
        "author": "dunsky",
        "id": 3,
        "permlink": "lorem",
        "votes": 31,
      },
    },
    "err": null,
    "loading": false,
    "hasMore": undefined,
  },
  "trending-art": Immutable.Record {
    "entries": Immutable.OrderedMap {},
    "err": null,
    "loading": false,
    "hasMore": true,
  },
}
`;

exports[`posts reducer (10) error occurred while fetching "trending". action:POSTS_FETCH_ERROR 1`] = `
Immutable.Map {
  "trending": Immutable.Record {
    "entries": Immutable.OrderedMap {
      "14": Object {
        "author": "good-karma",
        "id": 14,
        "permlink": "welcome to esteem",
        "votes": 5,
      },
    },
    "err": "an error has occurred",
    "loading": false,
    "hasMore": true,
  },
  "trending-art": Immutable.Record {
    "entries": Immutable.OrderedMap {},
    "err": null,
    "loading": false,
    "hasMore": true,
  },
}
`;

exports[`posts reducer (11) invalidate "trending". action:POSTS_INVALIDATE 1`] = `
Immutable.Map {
  "trending": Immutable.Record {
    "entries": Immutable.OrderedMap {},
    "err": null,
    "loading": false,
    "hasMore": true,
  },
  "trending-art": Immutable.Record {
    "entries": Immutable.OrderedMap {},
    "err": null,
    "loading": false,
    "hasMore": true,
  },
}
`;

exports[`posts reducer (12) should reset error. action:POSTS_INVALIDATE 1`] = `
Immutable.Map {
  "trending": Immutable.Record {
    "entries": Immutable.OrderedMap {},
    "err": null,
    "loading": true,
    "hasMore": true,
  },
}
`;
